# quickrs

./: Cargo.toml  README_zh.md
docs/: quickrs-INTEGRATION-GUIDE.md
examples/: hello.js  smoke.js  suite.js
src/: ast.rs  async_fns.rs  asyncrt.rs  error.rs  interp.rs  lexer.rs  lib.rs  main.rs  parser.rs  realm.rs  scope.rs  value.rs
src/builtins/: array.rs  console.rs  date.rs  errors.rs  globals.rs  json.rs  mapset.rs  math.rs  mod.rs  node_modules.rs  number.rs  object.rs  promise.rs  proxy.rs  regexp.rs  string_b.rs  symbol.rs  typed.rs
tests/: async_fns.rs
