[package]
name = "quickrs"
version = "0.1.0"
edition = "2021"
authors = ["quickrs"]
description = "A QuickJS-inspired JavaScript engine implemented in Rust with a Tokio async runtime"
license = "MIT"

[[bin]]
name = "quickrs"
path = "src/main.rs"

[lib]
name = "quickrs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
regex = "1"
fancy-regex = "0.14"
chrono = "0.4"
serde_json = "1"
corosensei = "0.2"
indexmap = "2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
